update arbitrary example (#1064)
change text to bg

--- a/src/pages/docs/background-color.mdx
+++ b/src/pages/docs/background-color.mdx
@@ -128,4 +128,4 @@ You can use any value defined in your [opacity scale](/docs/opacity), or use arb
 
 ### Arbitrary values
 
-<ArbitraryValues property="color" featuredClass="text-[#50d71e]" element="p" />
+<ArbitraryValues property="color" featuredClass="bg-[#50d71e]" element="p" />
