Update /docs/typography-plugin.mdx (#1063)
* Update /docs/typography-plugin.mdx

* Update typography-plugin.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/typography-plugin.mdx
+++ b/src/pages/docs/typography-plugin.mdx
@@ -263,38 +263,38 @@ module.exports = {
       typography: ({ theme }) => ({
         pink: {
           css: {
-            '--tw-prose-body': colors.pink[800],
-            '--tw-prose-headings': colors.pink[900],
-            '--tw-prose-lead': colors.pink[700],
-            '--tw-prose-links': colors.pink[900],
-            '--tw-prose-bold': colors.pink[900],
-            '--tw-prose-counters': colors.pink[600],
-            '--tw-prose-bullets': colors.pink[400],
-            '--tw-prose-hr': colors.pink[300],
-            '--tw-prose-quotes': colors.pink[900],
-            '--tw-prose-quote-borders': colors.pink[300],
-            '--tw-prose-captions': colors.pink[700],
-            '--tw-prose-code': colors.pink[900],
-            '--tw-prose-pre-code': colors.pink[100],
-            '--tw-prose-pre-bg': colors.pink[900],
-            '--tw-prose-th-borders': colors.pink[300],
-            '--tw-prose-td-borders': colors.pink[200],
-            '--tw-prose-invert-body': colors.pink[200],
-            '--tw-prose-invert-headings': colors.white,
-            '--tw-prose-invert-lead': colors.pink[300],
-            '--tw-prose-invert-links': colors.white,
-            '--tw-prose-invert-bold': colors.white,
-            '--tw-prose-invert-counters': colors.pink[400],
-            '--tw-prose-invert-bullets': colors.pink[600],
-            '--tw-prose-invert-hr': colors.pink[700],
-            '--tw-prose-invert-quotes': colors.pink[100],
-            '--tw-prose-invert-quote-borders': colors.pink[700],
-            '--tw-prose-invert-captions': colors.pink[400],
-            '--tw-prose-invert-code': colors.white,
-            '--tw-prose-invert-pre-code': colors.pink[300],
+            '--tw-prose-body': theme('colors.pink[800]'),
+            '--tw-prose-headings': theme('colors.pink[900]'),
+            '--tw-prose-lead': theme('colors.pink[700]'),
+            '--tw-prose-links': theme('colors.pink[900]'),
+            '--tw-prose-bold': theme('colors.pink[900]'),
+            '--tw-prose-counters': theme('colors.pink[600]'),
+            '--tw-prose-bullets': theme('colors.pink[400]'),
+            '--tw-prose-hr': theme('colors.pink[300]'),
+            '--tw-prose-quotes': theme('colors.pink[900]'),
+            '--tw-prose-quote-borders': theme('colors.pink[300]'),
+            '--tw-prose-captions': theme('colors.pink[700]'),
+            '--tw-prose-code': theme('colors.pink[900]'),
+            '--tw-prose-pre-code': theme('colors.pink[100]'),
+            '--tw-prose-pre-bg': theme('colors.pink[900]'),
+            '--tw-prose-th-borders': theme('colors.pink[300]'),
+            '--tw-prose-td-borders': theme('colors.pink[200]'),
+            '--tw-prose-invert-body': theme('colors.pink[200]'),
+            '--tw-prose-invert-headings': theme('colors.white'),
+            '--tw-prose-invert-lead': theme('colors.pink[300]'),
+            '--tw-prose-invert-links': theme('colors.white'),
+            '--tw-prose-invert-bold': theme('colors.white'),
+            '--tw-prose-invert-counters': theme('colors.pink[400]'),
+            '--tw-prose-invert-bullets': theme('colors.pink[600]'),
+            '--tw-prose-invert-hr': theme('colors.pink[700]'),
+            '--tw-prose-invert-quotes': theme('colors.pink[100]'),
+            '--tw-prose-invert-quote-borders': theme('colors.pink[700]'),
+            '--tw-prose-invert-captions': theme('colors.pink[400]'),
+            '--tw-prose-invert-code': theme('colors.white'),
+            '--tw-prose-invert-pre-code': theme('colors.pink[300]'),
             '--tw-prose-invert-pre-bg': 'rgb(0 0 0 / 50%)',
-            '--tw-prose-invert-th-borders': colors.pink[600],
-            '--tw-prose-invert-td-borders': colors.pink[700],
+            '--tw-prose-invert-th-borders': theme('colors.pink[600]'),
+            '--tw-prose-invert-td-borders': theme('colors.pink[700]'),
           },
         },
       }),
